@@ -216,6 +216,7 @@ Release 0.2.0
                expecting IllegalStateException
    HBASE-766   FileNotFoundException trying to load HStoreFile 'data'
    HBASE-770   Update HBaseRPC to match hadoop 0.17 RPC
+   HBASE-780   Can't scan '.META.' from new shell
    
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
